# kmail-alias-bot

./: .gitignore  Cargo.toml  LICENSE  Readme.org  docker-compose.yml  example-docker-compose-qnap-container-station.yaml  guix-package.scm  raw-package.scm  test-config.toml
.github/workflows/: pack.yml
src/: bot.rs  config.rs  email.rs  kmail_api.rs  main.rs  test.rs
src/email/: mock.rs
