[package]
name = "kmail-alias-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
confy = "0.6.1"
serde_json = "1.0.133"
mail-send = "0.4.9"
anyhow = "=1.0.89"
regex = "=1.11.0"

[dev-dependencies]
mockito = "1.6.1"
teloxide_tests = "0.2.0"
